syntax = "proto3";

package autoscraper.v1;

service AutoScraperService {
  rpc FindByFilter(FindByFilterRequest) returns (FindByFilterResponse) {}
}

message FindByFilterRequest {
  string brand = 1;
  string model = 2;
  uint32 min_year = 3;
  uint32 max_year = 4;
  double min_price = 5;
  double max_price = 6;
}

message Auto {
  string title = 1;
  double price = 2;
  string image_url = 3;
  string url = 4;
  uint32 year = 5;
}

message FindByFilterResponse {
  repeated Auto autos = 1;
}
